--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,6 +1,6 @@
-<div class="row mt-5">
+<div class="row mt-5" style="background-image: url('/collegePic/college.png');">
   <div class="col-md-6 m-auto">
-    <div class="card card-body text-center">
+    <div class=" text-center">
       <h1>Welcome to MEWAT ENGINEERING College</h1>
       <p>Create an account or login</p>
       <a href="/users/register" class="btn btn-primary btn-block mb-2"
