--- a/views/contact-success.ejs
+++ b/views/contact-success.ejs
@@ -1,18 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta>
-    <title>MecW</title>
-    <link rel="stylesheet" href="/style/styles.css">
 
-  </head>
-  <body>
-    <% include ./partials/nav.ejs %>
 
-  <h3>Contact Us!!</h3>
-  <p>Reach at Campus.</p>
-<p>Thanks for getting touch!!!</p>
+<h1>Thanks for getting touch!!!</h1>
   <p>You contacted to <strong><%= data.who %> </strong>in the <strong><%= data.department %> </strong> department.</p>
   <p>We will reply you at <strong> <%= data.email %></strong> soon.</p>
-  </body>
-</html>
+
