--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,6 +1,75 @@
-<% include partials/nav.ejs %>
-<h1 class="mt-4">Dashboard</h1>
-<marquee behavior="move" direction="left">Addmissions are Open For Session 2019-2020 | Practical Exams are Held in college from 1May-10May 2019</marquee>
 
-<p class="lead mb-3">Welcome <%= user.name %></p>
+<h1 class="mt-2">Dashboard</h1>
+<p class="lead mb-3">Welcome <b> <%= user.name %></b></p>
+<% if(user){ %>
+<div class="d-flex justify-content-end">
+   <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Manage Notifications</button>
+  </div>
+  <% } %>
+
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+        
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Manage Notifications</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                    <div class="d-flex justify-content-end">
+                        <a href="/note/addNotification" class="btn btn-outline-info"><img src="/materialicon/add.png" alt="">Notification</a>
+                    </div>
+              <div class="table-responsive-sm">
+                        <table class="table table-striped table-responsive table-dark">
+                          <thead>
+                            <tr>
+                              <th scope="col">Sr. No.</th>
+                              <th scope="col">Title</th>
+                  </tr>
+                </thead>
+              <% var count = 1 %>
+
+                <% not.forEach(function(note){ %>
+                  <tbody>
+                    <tr>
+                      <th scope="row"><%= count %> </th>
+                      <td ><%= note.title %></td>
+                      <td>
+                          <div class="container">
+                    <ul class="list-inline">
+                            <li>
+                            <form action="/note/deleteNotification/<%= note._id%>?_method=DELETE" class="form-inline my-2 my-lg-0" method="POST">
+                              <button class="btn btn-outline-danger my-2 my-sm-0"><img src="/materialicon/delete.png" alt="">Delete
+                            </button>
+                          </form>
+                          </li>
+                        </ul>
+                    </div>
+                        </td>    
+                </tr>
+                <% count++ %>
+                <% })  %>
+                </tbody>
+                </table>
+                
+                </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+    
+  </div>
+</div>
+
+<marquee behavior="scroll"
+style="font-family: lato;font-size: 25px; color: #FFFFFF ; background-color: rgb(165, 82, 241)" direction="left" scrollamount="6">
+<% not.forEach(function(not){  %>
+    <img src="materialicon/morev.svg" alt="">
+    <%= not.title %> 
+    <% }) %>
+</marquee>
 <img src="/collegePic/college.png" class="img-fluid" alt="Responsive-image" srcset="">
