--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,107 +1,60 @@
 
-    <% include ./partials/nav.ejs %>
+         <% if(user){  %>
+           <div class="d-flex justify-content-end">
+             <a href="/users/add">
+                 <button class="btn btn-primary" type="button" href="/users/add">
+             <img src="/materialicon/add.png" alt="">
+             Student
+           </button></a>
+           </div>
 
-    
-    <div class="container ">
-        <a href="/users/add">
-          <button class="btn btn-outline-primary" type="button" href="/users/add">
-            <img src="/materialicon/add.png" alt="">
-            Student
-          </button></a>
-
-            <button onclick="getLocation()" class="btn"><i class="material-icons">
-                room
-                </i></button>
-
-
-<p id="demo"></p>
-
-
-<script>
-var x = document.getElementById("demo");
-
-function getLocation() {
-if (navigator.geolocation) {
-  navigator.geolocation.getCurrentPosition(showPosition);
-} else { 
-  x.innerHTML = "Geolocation is not supported by this browser.";
-}
-}
-
-function showPosition(position) {
-x.innerHTML = "Latitude: " + position.coords.latitude + 
-"<br>Longitude: " + position.coords.longitude;
-}
-
-$(document).ready(function() {
-    $('#table2').DataTable();
-} );
-
-</script>
-
-            <div class="container">
-                <div class="row">
-                  <div class="col-sm">
-                  <a href="/courses/course/5cc5ddfe8a855d5b644c060c">  CSE</a>
-                  </div>
-                  <div class="col-sm">
-                   <a href="/courses/course/5cc4a48b74ba5562dc2419b4">ME</a>
-                  </div>
-                  <div class="col-sm">
-                    <a href="/courses/course/5cc4a8c1d94b7a03e0f4abf9">CE</a>
-                  </div>
-                </div>
-              </div>
-
-             
-<div class="table-responsive">
-        <table id="table2">
-          <thead>
-            <tr>
-              <th scope="col">Roll No.</th>
-              <th scope="col">Name</th>
-              <th scope="col">Registration No.</th>
-              <th scope="col">Department Name</th>
-              <th scope="col">Semester</th>
-              <!-- <th scope="col">Email</th> -->
-              <th scope="col">Action</th>
+         <% } %>
               
-  </tr>
-</thead>
-<% students.forEach(function(students){ %>
-  <tbody>
-    <tr> <a href="/users/students/<%=students._id %>">
-      <th scope="row"><%= students.rollno %></th>
-      <td ><%= students.name %></td>
-      <td><%= students.rgno %></td>
-    <td><%= students.dname %></td>
-    <td><%= students.sname %></td>
-    <!-- <td> <%= students.email%></td> -->
-  </a>
-  <td>
-    <ul class="action">
-    <li>
-      <a href="/users/students/<%=students._id %>" class="btn btn-outline-success"><img src="/materialicon/morev.svg" alt="">Details </a >
-      </li>
-      <li>
-        <a href="/users/index/<%=students._id %>" class="btn btn-outline-primary"><img src="/materialicon/edit.png" alt="">Edit</a >
-        </li>
-        <li>
-    <form action="/users/index/<%= students._id%>?_method=DELETE" method="POST">
-      <button class="btn btn-outline-danger"><img src="/materialicon/delete.png" alt="">Delete
-    </button>
-  </form>
-  </li>
-</ul>
+      <table id="myTable">
+        <thead>
+          <tr>
+          <th scope="col">Roll No.</th>
+          <th scope="col">Name</th>
+          <th scope="col">Registration No.</th>
+          <th scope="col">Department Name</th>
+          <th scope="col">Semester</th>
+          <th scope="col">Action</th>
+                    
+          </tr>
+        </thead>
+        <tbody>
+        <% students.forEach(function(student){ %>
+          <tr>
+          <th scope="row"><%= student.rollno %></th>
+          <td ><%= student.name %></td>
+          <td><%= student.rgno %></td>
+          <td><%= student.dname %></td>
+          <td><%= student.sname %></td>
+      <td>
+        <ul class="action">
+            <% if(login){ %>
+              <li>
+                <a href="/student/<%=student._id %>" ><img src="/materialicon/morev.svg" alt=""></a >
+              </li>
+              <li>
+                  <a href="/users/index/<%=student._id %>"><img src="/materialicon/edit.png" alt=""></a>
+              </li>
+              <li>
+                    <form action="/users/index/<%= student._id%>?_method=DELETE" method="POST">
+                      <button><img src="/materialicon/delete.png" alt=""></button>
+                  </form>
+              </li>
+              <%  } else {  %>
+                <li>
+                    <a href="/student/<%=student._id %>" class="btn btn-outline-success"><img src="/materialicon/morev.svg" alt="">Details </a >
+                    </li>
+              <% } %>
+    </ul>
+    
+    </td> 
+    </tr>
+    <%})%>
+    </tbody>
+    </table>
 
-</td>
-</tr>
-<%})%>
-</tbody>
-</table>
-
-</div>
-</div>
-
-</body>
-</html>
+   
