--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,6 @@
       <h1 class="text-center mb-3">
         
         <i class="fas fa-sign-in-alt"></i>  Login</h1>
-      <% include ./partials/messages %>
       <form action="/users/login" method="POST">
         <div class="form-group">
           <label for="email">Email</label>
@@ -30,6 +29,9 @@
         <button type="submit" class="btn btn-primary btn-block">Login</button>
       </form>
       <p class="lead mt-4">
+        No Account? <a href="/users/index">Login As Guest</a>
+      </p>
+      <p class="lead">
         No Account? <a href="/users/register">Register</a>
       </p>
     </div>
